ui fix for footer on mobile

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -152,6 +152,7 @@
     #smallerBox {
         text-align: center;
         display: flex;
+        flex-direction: column;
     }
 
     .socialsBox {
@@ -201,10 +202,11 @@
         margin-bottom: 0.75rem;
     }
 
-    #finalNotes #smallerBox {
+   #smallerBox {
         text-align: center;
         display: flex;
         margin: 1.5rem auto;
+        flex-direction: column;
     }
   }
   
